# elliottwave

./: .env  .env.example  .gitignore  README.md  pyproject.toml
docs/: CHANGELOG.md  PROGRESS.md  PROJECT_PLAN.md  PROJECT_SPEC_v1.md  PROJECT_SPEC_v1_1_ADDENDUM.md  PROJECT_SPEC_v1_2_ADDENDUM.md  PROJECT_SPEC_v1_3_ADDENDUM.md  PROJECT_SPEC_v1_4_ADDENDUM.md  PROJECT_SPEC_v1_5_ADDENDUM.md  PROJECT_SPEC_v1_6_ADDENDUM.md  PROJECT_SPEC_v1_7_ADDENDUM.md  PROJECT_SPEC_v1_8_ADDENDUM.md  PROJECT_SPEC_v1_9_ADDENDUM.md  PROJECT_SPEC_v2_0_M1_11_RECO.md  PROJECT_SPEC_v2_1_M1_10_WALKFORWARD.md  PROJECT_SPEC_v2_1_M1_12_WALKFORWARD.md  PROJECT_SPEC_v2_2_M1_7_CACHE_FEES.md  PROJECT_SPEC_v2_3_M1_9_LOGGING.md  PROJECT_SPEC_v2_4_M1_10_CONFIG.md  PROJECT_SPEC_v2_5_M1_11_NOTIFY.md  PROJECT_SPEC_v2_7_NOTIFICATIONS_TG_EMAIL.md  PROJECT_SPEC_v2_8_M1_8_WALKFORWARD_EXPANDING_ROLLING.md  PROJECT_SPEC_v2_BATCH_M1_10_NOTE.md  STATUS.md  STATUS.md:Zone.Identifier
src/ew6/: cli.py  debug_stackdump.py
src/ew6.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/ew6/backtest/: engine.py  simple.py
src/ew6/config/: __init__.py  core.py  loader.py  providers.py  providers.py:Zone.Identifier
src/ew6/data/: bar_builder.py  bars.py  types.py
src/ew6/exchange/: __init__.py  base.py  fees.py  meta.py  types.py
src/ew6/logging/: __init__.py  logger.py
src/ew6/notify/: __init__.py  base.py  core.py  email.py  formatter.py  formatter.py:Zone.Identifier  manager.py  stubs.py  telegram.py
src/ew6/reporting/: __init__.py  render.py
tests/: test_zigzag.py
(+19 files in other folders)
